--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,30 +4,65 @@
     android:id="@+id/activity_main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
     tools:context="edmt.dev.androidvisionapi.MainActivity">
 
-   <ImageView
-       android:id="@+id/imageView"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent" />
 
-
-
-    <Button
-        android:id="@+id/btnProcess"
-        android:text="Process"
+    <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
+        android:id="@+id/relativ"
+        android:padding="10sp">
+
+        <Button
+            android:id="@+id/camerabtn"
+
+            android:layout_width="45dp"
+            android:layout_height="45dp"
+            android:layout_alignParentLeft="true"
+            android:background="@drawable/camera"
+            />
+
+        <Button
+            android:id="@+id/btnProcess"
+            android:layout_width="220dp"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_centerHorizontal="true"
+            android:text="Process" />
+
+        <Button
+            android:layout_width="45dp"
+            android:layout_alignParentRight="true"
+            android:layout_height="45dp"
+            android:id="@+id/upload"
+            android:layout_marginLeft="10dp"
+            android:padding="10dp"
+            android:background="@drawable/default_photo_display"
+            />
+
+
+    </RelativeLayout>
+
+
+    <ImageView
+        android:id="@+id/imageView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_above="@+id/txtDescription"
+        android:layout_alignParentTop="true" />
+
+
+
 
     <TextView
         android:id="@+id/txtDescription"
         android:text="Description..."
-        android:layout_above="@id/btnProcess"
+        android:layout_above="@id/relativ"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:textSize="20dp"
+        android:padding="10dp"
+        android:layout_height="wrap_content"
+        />
 </RelativeLayout>
