--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,9 +61,17 @@
         android:id="@+id/txtDescription"
         android:text="Description..."
         android:layout_above="@id/relativ"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:textSize="20dp"
         android:padding="10dp"
         android:layout_height="wrap_content"
         />
+    <TextView
+        android:id="@+id/procent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:textSize="20dp"
+        android:padding="10dp"
+        android:layout_toRightOf="@id/txtDescription"
+        android:layout_above="@id/relativ"/>
 </RelativeLayout>
